# networkBMA

./: DESCRIPTION  LICENSE  NAMESPACE  NEWS  configure  configure.ac  configure.win
R/: FastScanBMABIC.r  FastScanBMAg.r  RcppExports.R  ScanBMA.R  ScanBMABIC.r  ScanBMAcontrol.R  ScanBMAg.r  bicreg.pr.R  bicreg.pr.resid.R  contabs.R  contabs.netwBMA.R  contabs.prelim.R  iBMAcontrolLM.R  iterateBMAlm.R  iterateBMAlm.resid.R  list2df.R  matrixFormat.R  networkBMA.R  prc.R  refNetwCalc.R  roc.R  scores.R  summary.networkBMA.R  varord.R  writeEdges.R
data/: .Rhistory  datalist  dream4.rda  vignette.rda
inst/: CITATION  cite
inst/doc/: networkBMA.Rnw  networkBMA.bib
man/: ScanBMA.Rd  ScanBMAcontrol.Rd  contabs.Rd  contabs.netwBMA.Rd  contabs.prelim.Rd  dream4.Rd  gControl.Rd  iBMAcontrolLM.Rd  iterateBMAlm.Rd  networkBMA-internal.Rd  networkBMA.Rd  roc.Rd  scores.Rd  summary.networkBMA.Rd  varord.Rd  vignette.Rd  writeEdges.Rd
src/: Makevars  Makevars.win  RcppExports.cpp  ScanBMA_full.cpp  config.h  config.h.in
vignettes/: networkBMA.R  networkBMA.Rnw  networkBMA.bib
